<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/general_header">
        <ListPreference
            app:key="@string/current_semester"
            app:title="@string/current_semester" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/is_remember_me"
            app:title="@string/is_remember_me"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/is_professor_rules"
            app:title="@string/is_professor_rules"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/is_admin_rules"
            app:title="@string/is_admin_rules"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>