<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <EditText
        android:id="@+id/lessonDateAndTimeEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/lesson_date_time_text"
        android:inputType="text"
        android:maxLength="16"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/lesson_type_text"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <RadioButton
            android:id="@+id/lessonIsLectureEditing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/is_lecture_text"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/lessonIsSeminarEditing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/is_seminar_text"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/lessonPointsPerVisitEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/lesson_attend_points_text"
        android:inputType="number"
        android:maxLength="1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/lessonAddVisitsForStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/add_visits_for_students_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp" />
</LinearLayout>