<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <EditText
        android:id="@+id/studentNameEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/name_form"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/studentSecondNameEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/second_name_form"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/studentLoginEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/login_form"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/studentPasswordEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/password_form"
        android:inputType="textVisiblePassword"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/studentEditingGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/login_and_password_generate"
        android:textSize="18sp" />

</LinearLayout>