<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <EditText
        android:id="@+id/eventStartDateEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/event_start_date_text"
        android:inputType="date"
        android:maxLength="10"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/eventDeadlineDateEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/event_deadline_date_text"
        android:inputType="date"
        android:maxLength="10"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/eventMinPointsEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/min_points_text"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/eventMaxPointsEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/max_points_text"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/eventNumberOfVariantsEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/number_of_variants_text"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/eventAddVisitsForStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/add_visits_for_students_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp" />
</LinearLayout>