<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <EditText
        android:id="@+id/professorNameEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/name_form"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/professorSecondNameEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/second_name_form"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/professorLoginEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/login_form"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/professorPasswordEditing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/password_form"
        android:inputType="textVisiblePassword" />

    <CheckBox
        android:id="@+id/professorEditingGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/login_and_password_generate"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/roleTextEditing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="2"
            android:text="@string/role_text"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/roleEditing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:entries="@array/roles"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>