<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <CheckBox
        android:id="@+id/subjectInfoIsLecturerAdding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/is_lecturer_text"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/subjectInfoIsSeminarianAdding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/is_seminarian_text"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/subjectInfoIsExamAdding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/is_exam_text"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/subjectInfoIsDifferentiatedCreditAdding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/is_differentiated_credit_text"
        android:textSize="18sp" />
</LinearLayout>