<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/outline_account_circle_black_18dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/outline_search_black_18dp"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/outline_settings_black_18dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/outline_logout_black_18dp"
            android:title="@string/menu_logout" />
    </group>
</menu>