<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/your_subject_type"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/subjectInfoIsExamEditing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/is_exam_text"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/subjectInfoIsDifferentiatedCreditEditing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/is_differentiated_credit_text"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/subjectInfoIsCreditEditing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/is_credit_text"
            android:textSize="17sp" />
    </RadioGroup>

</LinearLayout>