<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.electronicdiary.profile.ProfileFragment"
        android:label="@string/menu_profile">
        <action
            android:id="@+id/action_profile_to_group_performance"
            app:destination="@id/nav_group_performance" />
    </fragment>

    <fragment
        android:id="@+id/nav_group_performance"
        android:name="com.example.electronicdiary.group.GroupPerformanceFragment"
        android:label="@string/menu_group_performance">
        <action
            android:id="@+id/action_pop_out_to_profile"
            app:popUpTo="@id/nav_profile"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_group_performance_to_student_profile"
            app:destination="@id/nav_student_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_student_profile"
        android:name="com.example.electronicdiary.student.profile.StudentProfileFragment"
        android:label="@string/menu_student_profile">
        <action
            android:id="@+id/action_pop_out_to_group_performance"
            app:popUpTo="@id/nav_group_performance"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_pop_out_to_search_available_students"
            app:popUpTo="@id/nav_search_available_students"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_student_profile_to_student_performance"
            app:destination="@id/nav_student_performance" />
    </fragment>

    <fragment
        android:id="@+id/nav_student_performance"
        android:name="com.example.electronicdiary.student.performance.StudentPerformanceFragment"
        android:label="@string/menu_student_performance">
        <action
            android:id="@+id/action_pop_out_to_student_profile"
            app:popUpTo="@id/nav_student_profile"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_search_available_students"
        android:name="com.example.electronicdiary.search.SearchAvailableStudentsFragment"
        android:label="@string/menu_search_students">
        <action
            android:id="@+id/action_search_available_students_to_student_profile"
            app:destination="@id/nav_student_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_admin_actions"
        android:name="com.example.electronicdiary.admin.AdminActionsFragment"
        android:label="@string/admin_actions">
        <action
            android:id="@+id/action_admin_actions_to_search_groups"
            app:destination="@id/nav_search_groups" />
        <action
            android:id="@+id/action_admin_actions_to_search_all_students"
            app:destination="@id/nav_search_all_students" />
        <action
            android:id="@+id/action_admin_actions_to_search_subjects"
            app:destination="@id/nav_search_subjects" />
        <action
            android:id="@+id/action_admin_actions_to_search_professors"
            app:destination="@id/nav_search_professors" />
        <action
            android:id="@+id/action_admin_actions_to_search_semesters"
            app:destination="@id/nav_search_semesters" />
    </fragment>

    <fragment
        android:id="@+id/nav_search_all_students"
        android:name="com.example.electronicdiary.search.SearchAllStudentsFragment"
        android:label="@string/menu_search_students">
        <action
            android:id="@+id/action_pop_out_to_admin_actions"
            app:popUpTo="@id/nav_admin_actions"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_search_all_students_to_admin_actions"
            app:destination="@id/nav_admin_actions"
            app:popUpTo="@id/nav_admin_actions"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_search_all_students_to_search_groups"
            app:destination="@id/nav_search_groups" />
    </fragment>

    <fragment
        android:id="@+id/nav_search_groups"
        android:name="com.example.electronicdiary.search.SearchGroupsFragment"
        android:label="@string/menu_search_groups">
        <action
            android:id="@+id/action_pop_out_to_admin_actions"
            app:popUpTo="@id/nav_admin_actions"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_pop_out_to_search_all_students"
            app:popUpTo="@id/nav_search_all_students"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_search_groups_to_admin_actions"
            app:destination="@id/nav_admin_actions"
            app:popUpTo="@id/nav_admin_actions"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_search_subjects"
        android:name="com.example.electronicdiary.search.SearchSubjectsFragment"
        android:label="@string/menu_search_subjects">
        <action
            android:id="@+id/action_pop_out_to_admin_actions"
            app:popUpTo="@id/nav_admin_actions"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_search_subjects_to_admin_actions"
            app:destination="@id/nav_admin_actions"
            app:popUpTo="@id/nav_admin_actions"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_search_professors"
        android:name="com.example.electronicdiary.search.SearchProfessorsFragment"
        android:label="@string/menu_search_professors">
        <action
            android:id="@+id/action_pop_out_to_admin_actions"
            app:popUpTo="@id/nav_admin_actions"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_search_professors_to_admin_actions"
            app:destination="@id/nav_admin_actions"
            app:popUpTo="@id/nav_admin_actions"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_search_semesters"
        android:name="com.example.electronicdiary.search.SearchSemestersFragment"
        android:label="@string/menu_search_semesters">
        <action
            android:id="@+id/action_pop_out_to_admin_actions"
            app:popUpTo="@id/nav_admin_actions"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_search_semesters_to_admin_actions"
            app:destination="@id/nav_admin_actions"
            app:popUpTo="@id/nav_admin_actions"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.electronicdiary.settings.SettingsFragment"
        android:label="@string/menu_settings" />
</navigation>