<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <EditText
        android:id="@+id/studentPerformanceInSubjectEarnedPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/earned_points_text"
        android:inputType="number"
        android:maxLength="3"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/studentPerformanceInSubjectBonusPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/bonus_points_text"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/studentPerformanceInSubjectIsHaveCreditOrAdmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/studentPerformanceInSubjectExamEarnedPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/exam_earned_points_text"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/studentPerformanceInSubjectMark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/mark_text"
        android:inputType="number"
        android:maxLength="1"
        android:textSize="20sp" />
</LinearLayout>